--- a/css/style.css
+++ b/css/style.css
@@ -88,8 +88,12 @@ body{
 #home{
 	background-image: linear-gradient(to right, #000000, #474747);
 	height: 630px;
+	position: relative;
+	z-index: -1;
+
 }
-.NameAndOccupation{
+
+.NameAndTitle{
 	text-align: center;
 	float: left;
 	margin-top: 80px;
@@ -112,29 +116,30 @@ body{
 
 #hhline{
 	width: 700px;
-	margin-top: 180px;
-	margin-left: 50px;
+	/*margin-top: 180px;*/
+	/*margin-left: 50px;*/
 }
 
 #galz{
-	margin-top: 70px;
-	margin-right: 20px;
-	float: right;
+	/*margin-top: 70px;
+	margin-right: 20px;*/
+	/*float: right;*/
+	position: absolute;
+	top: 70px;
 	width: 480px;
 	height: 560px;
-	background-blend-mode: lighten;
 }
 
 .intro{
 	margin-top: 50px;
-	margin-left: 50px;
+	/*margin-left: 50px;*/
 	text-indent: 12%;
 	text-align: justify;
-	width: 700px
+	/*width: 700px*/
 }
 
 .intro p{
-	color: #c6c6c6;
+	color: #e3e3e3;
 	font-size: 1.7em;
 	font-family: "MS Reference Sans Serif Regular";	
 }
