--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@
 
 body{
 	margin: 0;
+	text-align: center;
+	background-color: #e0e0e0;
+	/*background-image: linear-gradient(to right, #858585, #202020);*/
 }
 
 #glogo{
@@ -70,40 +73,50 @@ body{
 }
 
 .navmenu a:hover{
-	border-bottom: 2px solid #00B1FF;
+	/*border-bottom: 2px solid #00B1FF;*/
 	text-decoration: none;
-	color: #FFC200;
+	color: #e2e2e2;
 }
 
 .navmenu a.active{
-	border-bottom: 2px solid #00B1FF;
+	border-bottom: 3px solid #FFB600;
 	text-decoration: none;
-	color: #FFC200;
+	color: #e2e2e2;
 }
 .main{
-	margin-top: 65px;
+	/*margin-top: 65px;
   	width: 100%;
+  	max-width:90%;
+  	margin: 0 auto;*/
+}
+
+.wrap{
+	max-width: 100%;
+	text-align: center;
+	margin: 0 auto;
 }
 
 #home{
-	background-image: linear-gradient(to right, #000000, #474747);
+	/*background-image: linear-gradient(to right, #000000, #474747);*/
 	height: 630px;
 	position: relative;
+	display: inline-block;
 	z-index: -1;
 }
 
 .NameAndTitle{
 	text-align: center;
 	float: left;
-	margin-top: 80px;
+	/*position: relative;*/
+	margin-top: 150px;
 	margin-left: 50px;
-	width: 700px;
+	width: 600px;
 }
 
 #completeName{
 	font-family: "Spy Agency Regular";
 	font-size: 2.5em;
-	color: #a4a4a4;
+	color: #000000;
 	margin: 0;
 }
 
@@ -114,15 +127,17 @@ body{
 }
 
 #hhline{
-	width: 700px;
+	width: 600px;
 	/*margin-top: 180px;*/
 	/*margin-left: 50px;*/
 }
 
 #galz{
-	margin-top: 70px;
-	margin-right: 20px;
-	float: right;
+	margin-top: 100px;
+	margin-left: 100px;
+	/*margin-right: 20px;*/
+	/*position: fixed;*/
+	/*float: right;*/
 	/*position: absolute;
 	top: 70px;*/
 	/*left: 20px;*/
@@ -132,44 +147,45 @@ body{
 
 .intro{
 	margin-top: 50px;
-	/*margin-left: 50px;*/
+	margin-left: 30px;
 	text-indent: 12%;
-	text-align: justify;
-	/*width: 700px*/
+	text-align: justify; 
+	width: 540px
 }
 
 .intro p{
-	color: #e3e3e3;
+	color: #515151;
 	font-size: 1.7em;
 	font-family: "MS Reference Sans Serif Regular";	
 }
 
 .intro button{
-	font-size: 1.5em;
+	font-size: 1.3em;
 	float: right;
 	border: none;
 	height: 45px;
 	width: 250px;
-	background-color: #FFB600;
+	background-color: #666666;
 	border-radius: 20px;
-	/*margin-top: 180px;*/
-	margin-right: 50px;
+	margin-top: 100px;
+	color: #ffffff;
+	/*margin-right: 50px;*/
 }
 
 #about{
-	background-image: linear-gradient(to right, #84ff00, #005202);
+	/*background-image: linear-gradient(to right, #84ff00, #005202);*/
 	height: 630px;	
 }
 
 #skills{
-	background-image: linear-gradient(to right, #ff4e00, #fff000);
+	/*background-image: linear-gradient(to right, #ff4e00, #fff000);*/
 	height: 630px;
 }
 #projects{
-	background-image: linear-gradient(to right, #ff0000, #720000);
+	/*background-image: linear-gradient(to right, #ff0000, #720000);*/
 	height: 630px;
 }
 #contact{
-	background-image: linear-gradient(to right, #000000, #474747);
+	/*background-image: linear-gradient(to right, #000000, #474747);*/
 	height: 630px;
 }
