--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@
 body{
 	margin: 0;
 	text-align: center;
-	background-color: #e0e0e0;
+	background-color: #cccccc;
+	/*background-color: #e0e0e0;*/
 	/*background-image: linear-gradient(to right, #858585, #202020);*/
 }
 
@@ -44,15 +45,19 @@ body{
 	/*background-color: #1E1E1E;*/
 	overflow: hidden;
 	position: fixed;
-	height: 65px;
+	height: 70px;
 	width: 100%;
 	top: 0;
-	background-color: #2D2D2D;
+	/*background-color: #2D2D2D;*/
+	/*border-bottom: 5px solid #FFB600;*/
+	background: linear-gradient(to right, #ff2e00 , #FFB600, #FFB600) left bottom #2D2D2D no-repeat;
+	background-size: 100% 5px;
+	box-shadow: 0px 1px 30px #2D2D2D ;
 }
 
 .navmenu {
 	margin-right: 50px;
-	margin-top: 24px;
+	margin-top: 27px;
 }
 
 .navmenu ul{
@@ -79,9 +84,13 @@ body{
 }
 
 .navmenu a.active{
-	border-bottom: 3px solid #FFB600;
+	/*border-bottom: 3px solid #FFB600;*/
+	background: linear-gradient(#2D2D2D, #FFB600);
 	text-decoration: none;
-	color: #e2e2e2;
+	font-weight: bold;
+	/*color: #e2e2e2;*/
+	color: #000000;
+	text-shadow:  0px 0px 5px #FFB600 ;
 }
 .main{
 	/*margin-top: 65px;
@@ -135,12 +144,14 @@ body{
 #galz{
 	margin-top: 100px;
 	margin-left: 100px;
+	/*width: 100%;
+	height: auto;*/
 	/*margin-right: 20px;*/
 	/*position: fixed;*/
 	/*float: right;*/
-	/*position: absolute;
-	top: 70px;*/
-	/*left: 20px;*/
+	/*position: absolute;*/
+	/*top: 70px;
+	left: 20px;*/
 	width: 480px;
 	height: 560px;
 }
@@ -186,6 +197,16 @@ body{
 	height: 630px;
 }
 #contact{
+	/*background-color: #2D2D2D;*/
 	/*background-image: linear-gradient(to right, #000000, #474747);*/
 	height: 630px;
+}
+#gfooter{
+	position: absolute;
+	width: 100%;
+	background-color: #5b5b5b;
+	font-family: "MS Reference Sans Serif Regular";	
+	font-size: 0.8em;
+	text-align: center;
+	color: #252525;
 }
