--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,11 @@ body{
 	height: 70px;
 	width: 100%;
 	top: 0;
+	z-index: 1;
 	/*background-color: #2D2D2D;*/
 	/*border-bottom: 5px solid #FFB600;*/
 	background: linear-gradient(to right, #ff2e00 , #FFB600, #FFB600) left bottom #2D2D2D no-repeat;
-	background-size: 100% 5px;
+	background-size: 100% 4px;
 	box-shadow: 0px 1px 30px #2D2D2D ;
 }
 
@@ -106,11 +107,15 @@ body{
 }
 
 #home{
+	/*background-color: #999999; */
 	/*background-image: linear-gradient(to right, #000000, #474747);*/
-	height: 630px;
+	height: 670px;
 	position: relative;
+	/*z-index: -1;*/
+}
+
+#hinnercon{
 	display: inline-block;
-	z-index: -1;
 }
 
 .NameAndTitle{
@@ -204,15 +209,18 @@ body{
 	/*height: 630px;*/
 	height: 630px;
 	position: relative;
-	z-index: 1;
+	/*z-index: 1;*/
 }
 
-input[type="text"], input[type="email"], textarea{
+#cinnerwrap label{
+	color: #787878;
+}
+
+#cinnerwrap input[type="text"], input[type="email"], textarea{
 	/*width: 300px;
 	padding: 12px;
 	border-radius: 4px;
-	box-sizing: border-box;*/
-
+	box-sizing: border-box;*/	
 	width: 100%; /* Full width */
     padding: 12px; /* Some padding */  
     border: 1px solid #ccc; /* Gray border */
@@ -220,31 +228,34 @@ input[type="text"], input[type="email"], textarea{
     box-sizing: border-box; /* Make sure that padding and width stays in place */
     margin-top: 6px; /* Add a top margin */
     margin-bottom: 16px; /* Bottom margin */
-    resize: vertical
+    resize: none;
 }
 
-input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
+#cinnerwrap input[type=submit] {
+    background-color: #787878;
+    color: #ffffff;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }
 
-#contact form{
+#cinnerwrap form{
 	top: 100px;
 	width: 500px;
 	text-align: left;
 	position: relative;
 	margin: 0 auto;
-
-
 }
+
 #gfooter{
-	position: absolute;
-	width: 100%;
+	position: relative;
+	height: 70px;
 	background-color: #2D2D2D;
+	padding-top: 5px;
+}
+
+#gfinnerwrap{
 	font-family: "MS Reference Sans Serif Regular";	
 	font-size: 0.8em;
 	text-align: center;
