--- a/css/style.css
+++ b/css/style.css
@@ -1,263 +1,48 @@
-@font-face{
-	font-family: gpixel;
-	src: url(../fonts/Minecraftia-Regular.ttf);
-}
+nav button {
 
-@font-face{
-	font-family: gsans;
-	src: url(../fonts/OpenSans-Regular.ttf);
-}
-
-@font-face{
-	font-family: "Spy Agency Regular";
-	src: url(../fonts/spyagencyv3.ttf);
-}
-
-@font-face{
-	font-family: "MS Reference Sans Serif Regular";
-	src: url(../fonts/REFSAN.ttf);
-}
-
-body{
-	margin: 0;
-	text-align: center;
-	background-color: #e0e0e0;
-	/*background-color: #e0e0e0;*/
-	/*background-image: linear-gradient(to right, #858585, #202020);*/
-}
-
-#glogo{
-	width: 70px;
-	height: 50px;
-	margin-left: 50px;
-	margin-top: 8px;
-	float: left;
-}
-
-#glogodef{
-	font-size: 1.5em;
-	color: #FFB600;
-	margin-left: 80px; 
-	float: left;
-}
-
-.navbar{
-	/*background-color: #1E1E1E;*/
-	overflow: hidden;
-	position: fixed;
-	height: 70px;
-	width: 100%;
-	top: 0;
-	z-index: 1;
-	/*background-color: #2D2D2D;*/
-	/*border-bottom: 5px solid #FFB600;*/
-	background: linear-gradient(to right, #ff2e00 , #FFB600, #FFB600) left bottom #2D2D2D no-repeat;
-	background-size: 100% 4px;
-	box-shadow: 0px 1px 30px #2D2D2D ;
-}
-
-.navmenu {
-	margin-right: 50px;
-	margin-top: 27px;
-}
-
-.navmenu ul{
-	list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.navmenu a{
-	color: #969696;
-	float: right;
-	display: block;
-	text-decoration: none;
-	text-align: center;
-	font-family: gsans;
-	font-size: 0.9em;
-	padding: 10px 23px;
-}
-
-.navmenu a:hover{
-	/*border-bottom: 2px solid #00B1FF;*/
-	text-decoration: none;
-	color: #e2e2e2;
-}
-
-.navmenu a.active{
-	/*border-bottom: 3px solid #FFB600;*/
-	background: linear-gradient(#2D2D2D, #FFB600);
-	text-decoration: none;
+	background-color: #343A40;
+	border-color: #00C9FF;
+	color: #00C9FF;
+	border-radius: 5px;
+	border-width: 1px;
+	height: 40px;
+	width: 100px;
+	font-size: 1.2em;
 	font-weight: bold;
-	/*color: #e2e2e2;*/
-	color: #000000;
-	text-shadow:  0px 0px 5px #FFB600 ;
-}
-.main{
-	/*margin-top: 65px;
-  	width: 100%;
-  	max-width:90%;
-  	margin: 0 auto;*/
+
 }
 
-.wrap{
-	max-width: 100%;
-	text-align: center;
-	margin: 0 auto;
-}
-
-#home{
-	/*background-color: #999999; */
-	/*background-image: linear-gradient(to right, #000000, #474747);*/
-	height: 670px;
-	position: relative;
-	/*z-index: -1;*/
-}
-
-#hinnercon{
-	display: inline-block;
-}
-
-.NameAndTitle{
-	text-align: center;
-	float: left;
-	/*position: relative;*/
-	margin-top: 150px;
-	margin-left: 50px;
-	width: 600px;
-}
-
-#completeName{
-	font-family: "Spy Agency Regular";
-	font-size: 2.5em;
-	color: #000000;
-	margin: 0;
-}
-
-#occupation{
-	font-family: "MS Reference Sans Serif Regular";
-	color: #515151;
-	margin-top: 8px;
-}
-
-#hhline{
-	width: 600px;
-	/*margin-top: 180px;*/
-	/*margin-left: 50px;*/
-}
-
-#galz{
-	margin-top: 100px;
-	margin-left: 100px;
-	/*width: 100%;
-	height: auto;*/
-	/*margin-right: 20px;*/
-	/*position: fixed;*/
-	/*float: right;*/
-	/*position: absolute;*/
-	/*top: 70px;
-	left: 20px;*/
-	width: 480px;
-	height: 560px;
-}
-
-.intro{
-	margin-top: 50px;
-	margin-left: 30px;
-	text-indent: 12%;
-	text-align: justify; 
-	width: 540px
-}
-
-.intro p{
-	color: #515151;
-	font-size: 1.7em;
-	font-family: "MS Reference Sans Serif Regular";	
-}
-
-.intro button{
-	font-size: 1.3em;
-	float: right;
-	border: none;
-	height: 45px;
-	width: 250px;
-	background-color: #666666;
-	border-radius: 20px;
-	margin-top: 100px;
+nav button:hover {
+	background-color: #05AAD1;
 	color: #ffffff;
-	/*margin-right: 50px;*/
+	border: none;
 }
 
-#about{
-	/*background-image: linear-gradient(to right, #84ff00, #005202);*/
-	height: 630px;	
+nav ul li {
+	padding: 0px 25px 0px 25px;
 }
 
-#skills{
-	/*background-image: linear-gradient(to right, #ff4e00, #fff000);*/
-	height: 630px;
-}
-
-#projects{
-	/*background-image: linear-gradient(to right, #ff0000, #720000);*/
-	height: 630px;
-}
-
-#contact{
-	/*background-color: #cccccc; */
-	/*background-image: linear-gradient(to right, #000000, #474747);*/
-	/*height: 630px;*/
-	height: 630px;
-	position: relative;
-	/*z-index: 1;*/
-}
-
-#cinnerwrap label{
-	color: #787878;
-}
-
-#cinnerwrap input[type="text"], input[type="email"], textarea{
-	/*width: 300px;
-	padding: 12px;
-	border-radius: 4px;
-	box-sizing: border-box;*/	
-	width: 100%; /* Full width */
-    padding: 12px; /* Some padding */  
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: none;
-}
-
-#cinnerwrap input[type=submit] {
-    background-color: #787878;
-    color: #ffffff;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-#cinnerwrap form{
-	top: 100px;
-	width: 500px;
-	text-align: left;
-	position: relative;
-	margin: 0 auto;
-}
-
-#gfooter{
-	position: relative;
-	height: 70px;
-	background-color: #2D2D2D;
-	padding-top: 5px;
-}
-
-#gfinnerwrap{
-	font-family: "MS Reference Sans Serif Regular";	
-	font-size: 0.8em;
+nav ul li a {
 	text-align: center;
-	color: #969696;
+	font-size: 1em;
+	width: 30px;
+	border-bottom: 3px solid transparent;
+	transition: width .8s ease, font-size .8s ease;
+}
+
+nav ul li a:hover {
+	border-bottom: 3px solid #00C9FF;
+	width : 100px;
+	font-size: 1.2em;
+}
+
+#mypic { 
+	margin-top: 50px;
+	border-radius: 	100%;
+	border: 8px solid #ffffff;
+	/*box-shadow: 10px 10px 10px #000000;*/
+}
+
+.social {
+	margin-right: 30px;
 }
