--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: ubuntu-r;
+	src: url(../font/Ubuntu-R.ttf);
+}
+
 nav button {
 
 	background-color: #343A40;
@@ -37,7 +42,6 @@ nav ul li a:hover {
 }
 
 #mypic { 
-	margin-top: 50px;
 	border-radius: 	100%;
 	border: 8px solid #ffffff;
 	/*box-shadow: 10px 10px 10px #000000;*/
@@ -45,4 +49,53 @@ nav ul li a:hover {
 
 .social {
 	margin-right: 30px;
+}
+
+h4 {
+	font-family: ubuntu-r;
+	margin-top: 50px;
+}
+
+div div div button {
+	font-family: ubuntu-r;
+	font-size: 1.5em;
+	color: #ffffff;
+	margin-top: 30px;
+	/*border: 2px solid #343A40;*/
+	border: 0px;
+	background-color: #00C9FF;
+	/*border-radius: 10px;*/
+	padding: 10px 30px 10px 30px;
+}
+
+#home {
+	padding: 60px 0px 60px 0px;
+}
+
+#contact {
+	background-color: #E5E5E5;
+	padding: 60px 0px 60px 0px;
+}
+
+.form-container {
+	background-color: #ffffff;
+	width: 500px;
+	margin: 0 auto;
+	padding: 20px;
+
+}
+
+textarea {
+	resize: none;
+}
+
+.form-container form button {
+	padding: 10px 50px 10px 50px;
+	background-color: #343A40;
+	color: #ffffff;
+	border-radius: 0px;
+}
+
+.form-container form button:hover {
+	color: #00C9FF;
 }
