--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,27 @@
 	src: url(../font/Ubuntu-R.ttf);
 }
 
-nav button {
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+::-webkit-scrollbar-track {
+	background: #00C9FF; 
+}
+
+::-webkit-scrollbar-thumb {
+	background: #888; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #4F5559; 
+}
+
+::-webkit-scrollbar-track-piece {
+	background: #F1F1F1;
+}
+
+/*nav button {
 
 	background-color: #343A40;
 	border-color: #00C9FF;
@@ -21,13 +41,13 @@ nav button:hover {
 	background-color: #05AAD1;
 	color: #ffffff;
 	border: none;
-}
+}*/
 
 nav ul li {
-	padding: 0px 25px 0px 25px;
+	/*padding: 0px 15px 0px 15px;*/
 }
 
-nav ul li a {
+/*nav ul li a {
 	text-align: center;
 	font-size: 1em;
 	width: 30px;
@@ -39,6 +59,27 @@ nav ul li a:hover {
 	border-bottom: 3px solid #00C9FF;
 	width : 100px;
 	font-size: 1.2em;
+}*/
+
+/*.active {
+	border-bottom: 3px solid #00C9FF;
+	width: 100px;
+	font-size: 1.2em;
+}
+*/
+
+
+.social {
+	margin-right: 30px;
+}
+
+/*====================================================*/
+/*home section*/
+#home {
+	/*padding: 60px 0px 60px 0px;*/
+	padding-top: 150px;
+	padding-bottom: 150px;
+	height:800px;
 }
 
 #mypic { 
@@ -47,13 +88,10 @@ nav ul li a:hover {
 	/*box-shadow: 10px 10px 10px #000000;*/
 }
 
-.social {
-	margin-right: 30px;
-}
-
 h4 {
 	font-family: ubuntu-r;
 	margin-top: 50px;
+	width: 650px;
 }
 
 div div div button {
@@ -63,19 +101,66 @@ div div div button {
 	margin-top: 30px;
 	/*border: 2px solid #343A40;*/
 	border: 0px;
-	background-color: #00C9FF;
+	/*background-color: #00C9FF;*/
+	background-color: #343A40;
 	/*border-radius: 10px;*/
 	padding: 10px 30px 10px 30px;
 }
 
-#home {
-	padding: 60px 0px 60px 0px;
+
+
+/*====================================================*/
+/*about section*/
+#about {
+	/*padding: 60px 0px 60px 0px;	*/
+	
+	padding-top: 150px;
+	padding-bottom: 150px;
+
 }
 
-#contact {
-	background-color: #E5E5E5;
-	padding: 60px 0px 60px 0px;
+.about-container {
+	font-family: ubuntu-r;
+	/*height: 500px;*/
+	padding: 20px;
 }
+
+/*====================================================*/
+/*works section*/
+#works {
+	/*background-color: #24282B;*/
+	/*padding: 60px 0px 60px 0px;*/
+	padding-top: 150px;
+	padding-bottom: 150px;
+}
+
+div div div p {
+	border-style: none;
+	background: transparent;
+	color: #999687;
+	font-size: 1.2em;
+}
+
+div div div p:hover {
+	cursor: pointer;
+	color: #000000;
+}
+
+.margin-lr {
+	margin-left: 100px;
+	margin-right: 100px;
+}
+
+
+/*====================================================*/
+/*contact section*/
+#contact {
+	/*background-color: #E5E5E5;*/
+	/*padding: 60px 0px 60px 0px;*/
+	padding-top: 150px;
+	padding-bottom: 150px;
+}
+
 
 .form-container {
 	background-color: #ffffff;
@@ -98,4 +183,39 @@ textarea {
 
 .form-container form button:hover {
 	color: #00C9FF;
+}
+
+/*====================================================================*/
+/*responsive style*/
+
+@media screen and ( min-width: 700px ) {
+	.px-3 {
+		padding: 0px 30px 0px 30px !important;
+	}
+
+	nav ul li {
+		padding: 0px 15px 0px 15px;
+	}
+}
+
+@media screen and ( max-width: 680px ) {
+
+	nav img {
+		width: 35px;
+	}
+
+	#home {
+		padding-top: 90px;
+		height: 450px;
+	}
+	
+	#home div div div div {
+		font-size: 1em; 
+		padding-top: 15px;
+	}
+
+	#mypic {
+		height: 180px !important;
+		width: 180px !important;
+	}
 }
